libs/toolkit-macros-tests/tests/ui/pass/expand_vars_no_marked_fields.rs
use toolkit_macros::ExpandVars;

#[derive(ExpandVars)]
struct Cfg {
    retries: u32,
    enabled: bool,
}

fn main() {}
